--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ services:
 # Install latest Docker CE so we can use Dockerfile outside build context
 addons:
   apt:
-    sources:
-      - google-chrome
+#    sources:
+#      - google-chrome
     packages:
-      - google-chrome-stable
       - docker-ce
+#      - google-chrome-stable
 
 # Install any dependencies, update Docker Compose to 1.23.2 so we can use Dockerfile outside build context
 before_install:
