--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,53 +2,53 @@ version: "3"
 
 services:
   todo-postgres:
-    image: eduyubero/todo-postgres:1.0
+    image: edumatrixx/todo-postgres:1.0
 
   todo-cache-ingestion:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-cache-ingestion:1.0
+    image: edumatrixx/todo-cache-ingestion:1.0
 
   todo-cache-service:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-cache-service:1.0
+    image: edumatrixx/todo-cache-service:1.0
 
   todo-search-ingestion:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-search-ingestion:1.0
+    image: edumatrixx/todo-search-ingestion:1.0
     command: sh /home/node/app/start.sh
 
   todo-search-service:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-search-service:1.0
+    image: edumatrixx/todo-search-service:1.0
     command: sh /home/node/app/start.sh
 
   todo-storage-ingestion:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-storage-ingestion:1.0
+    image: edumatrixx/todo-storage-ingestion:1.0
     command: sh /home/node/app/start.sh
 
   todo-storage-service:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-storage-service:1.0
+    image: edumatrixx/todo-storage-service:1.0
 
   todo-api-gateway:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
-    image: eduyubero/todo-api-gateway:1.0
+    image: edumatrixx/todo-api-gateway:1.0
     command: sh /home/node/app/start.sh
 
   todo-view:
     build:
       dockerfile: Dockerfile.prod
-    image: eduyubero/todo-view:1.0
+    image: edumatrixx/todo-view:1.0
     ports:
       - 4201:8080
 
   todo-proxy:
-    image: eduyubero/todo-proxy:1.0
+    image: edumatrixx/todo-proxy:1.0
