--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,16 @@ after_success:
 
   # Take the built production images and push to Docker Hub
   - docker-compose -f docker-compose.yml -f docker-compose.prod.yml push
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-2
+  app: Todo Application
+  env: TodoApplication-env
+  bucket_name: elasticbeanstalk-eu-west-2-318201312016
+  bucket_path: todo-app
+  on:
+    branch: master # master or main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
