--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ deploy:
   bucket_name: elasticbeanstalk-eu-west-2-318201312016
   bucket_path: todo-app
   on:
-    branch: master # master or main
+    branch: main # master or main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
     secure: $AWS_SECRET_KEY
